# storage/api-docs/api-docs.json
@@ -151,7 +151,7 @@
         "/api/sociedadesAnonimas": {
             "get": {
                 "tags": [
-                    "sociedadAnonima-user"
+                    "sociedadAnonima-apoderado"
                 ],
                 "summary": "Sociedades anonimas",
                 "description": "Sociedades anonimas del usuario logueado",
@@ -165,6 +165,9 @@
                                 "example": ""
                             }
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     },
                     "500": {
                         "description": "500 internal server error",
@@ -210,6 +213,361 @@
                                 "example": ""
                             }
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "500 internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "500 internal server error"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/updateSociedadAnonimaStatus/{taskId}": {
+            "post": {
+                "tags": [
+                    "sociedadAnonima-empleado"
+                ],
+                "summary": "Sociedad anonima",
+                "description": "Aprobar/Rechazar una tarea asignada, del empleado autenticado",
+                "operationId": "updateSociedadAnonimaStatus",
+                "parameters": [
+                    {
+                        "name": "taskId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "aprobado": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Tarea aprobada/rechazada",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "Tarea aprobada/rechazada"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "No puedes aprobar/rechazar esta tarea",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "No puedes aprobar/rechazar esta tarea."
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "500 internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "500 internal server error"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/estatuto": {
+            "put": {
+                "tags": [
+                    "sociedadAnonima-apoderado"
+                ],
+                "summary": "Sociedad anonima",
+                "description": "Subir un nuevo archivo estatuto",
+                "operationId": "updateEstatuto",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "archivo_estatuto": {
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Estatuto actualizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "Estatuto actualizado"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "No puedes modificar el estatuto de esta S.A.",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "No puedes modificar el estatuto de esta S.A."
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "500 internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "500 internal server error"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/availableEmployeeTasks": {
+            "get": {
+                "tags": [
+                    "tareas-empleado"
+                ],
+                "summary": "Tareas disponibles para el empleado autenticado",
+                "description": "Tareas disponibles para el empleado autenticado",
+                "operationId": "availableTasks",
+                "responses": {
+                    "200": {
+                        "description": "JSON con tareas disponibles, listas para asignar",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "500 internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "500 internal server error"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/employeeTasks/": {
+            "get": {
+                "tags": [
+                    "tareas-empleado"
+                ],
+                "summary": "Tareas asignadas al empleado autenticado",
+                "description": "Tareas asignadas al empleado autenticado",
+                "operationId": "userTasks",
+                "responses": {
+                    "200": {
+                        "description": "JSON con tareas asignadas al empleado autenticado",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "500 internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "500 internal server error"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/employeeTask/{taskId}": {
+            "get": {
+                "tags": [
+                    "tareas-empleado"
+                ],
+                "summary": "Tarea con id {taskId} y datos de la S.A. asociada",
+                "description": "Tarea con id {taskId} y datos de la S.A. asociada",
+                "operationId": "getTaskSociedadDataById",
+                "parameters": [
+                    {
+                        "name": "taskId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JSON con tarea + datos S.A.",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "500 internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "500 internal server error"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/assignTask/{taskId}": {
+            "post": {
+                "tags": [
+                    "tareas-empleado"
+                ],
+                "summary": "Asignar tarea con id {taskId} al empleado autenticado",
+                "description": "Asignar tarea con id {taskId} al empleado autenticado",
+                "operationId": "assignTask",
+                "parameters": [
+                    {
+                        "name": "taskId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Tarea asignada",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "500 internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "500 internal server error"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/unassignTask/{taskId}": {
+            "post": {
+                "tags": [
+                    "tareas-empleado"
+                ],
+                "summary": "Liberar tarea con id {taskId}, que estaba asignada al usuario autenticado",
+                "description": "Liberar tarea con id {taskId}, que estaba asignada al usuario autenticado",
+                "operationId": "unassignTask",
+                "parameters": [
+                    {
+                        "name": "taskId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Tarea liberada",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     },
                     "500": {
                         "description": "500 internal server error",
